--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,9 @@
 #root {
   --primary-color: #7540e2;
-  --secondary-color: #beb0d1;
+  --secondary-color: #ca5ad4;
   --tertiary-color: #3b3c44 ;
-  max-width: 1280px;
   margin: 0 auto;
-  width: 60%;
+  width: 60vw;
   padding: 2rem;
   text-align: center;
   color: white;
@@ -15,6 +14,8 @@
 }
 body {
   background-color: #020007;
+  max-width: 100vw;
+  overflow: hidden;
 }
 
 .app{
@@ -22,4 +23,15 @@ body {
   border-radius: 8px;
   padding: 20px;
   background-color: #000000;
+}
+
+@media (max-width: 900px) {
+  #root {
+    width: 80vw;
+    transition: width 0.5s ease-in-out;
+  }
+  body{
+    max-height: none;
+    overflow: auto;
+  }
 }
